fix(ui/input, select): fix text overflow error

--- a/packages/varlet-ui/src/field-decorator/fieldDecorator.less
+++ b/packages/varlet-ui/src/field-decorator/fieldDecorator.less
@@ -80,6 +80,8 @@
 
   &__placeholder-text {
     display: inline-block;
+    pointer-events: none;
+    opacity: 0;
   }
 
   &__clear-icon[var-field-decorator-cover] {
@@ -89,7 +91,7 @@
   }
 
   &--placeholder-hint {
-    width: 133%;
+    width: calc(1.33 * var(--field-decorator-legend-max-width, var(--filed-decorator-controller-width)));
   }
 
   &--placeholder-hidden {
@@ -222,10 +224,6 @@
         overflow: hidden;
         display: block;
         white-space: nowrap;
-      }
-
-      &-legend--hint {
-        max-width: 100%;
       }
     }
 
